# ncnn-android-yolov8

ncnn-android-yolov8/: local.properties
ncnn-android-yolov8/app/: build.gradle
ncnn-android-yolov8/app/src/main/jni/: CMakeLists.txt
